sample/msvc/error/c2085.cpp
// C2085.c
void func1( void )
int main( void ) {}   // C2085
